@@ -1,43 +1,41 @@
 package org.example;
 
-import java.io.*;
+import java.io.BufferedWriter;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Scanner;
 
 public class WorkWithFile {
     private final String NAME_READ_FILE = "input.txt";
     private final String NAME_WRITE_FILE = "output.txt";
 
     public List<List<String>> readFileByName() {
-        File file = new File(NAME_READ_FILE);
         List<List<String>> strings = new ArrayList<>();
-        try (Scanner scanner = new Scanner(file)) {
-            while (scanner.hasNextLine()) {
-                String string = scanner.nextLine();
-                strings.add(List.of(string.split(",")));
+        try {
+            List<String> lines = Files.readAllLines(Paths.get(NAME_READ_FILE));
+            for (String line : lines) {
+                strings.add(Arrays.asList(line.split(",")));
             }
-        } catch (FileNotFoundException e) {
+        } catch (IOException e) {
             throw new RuntimeException(e);
         }
         return strings;
     }
     public void writeFile(String string) {
-        File file = new File(NAME_WRITE_FILE);
-        try (
-                FileWriter fileWriter = new FileWriter(file, true);
-                BufferedWriter bufferedWriter = new BufferedWriter(fileWriter)
-        ) {
+        try (BufferedWriter bufferedWriter = new BufferedWriter(new FileWriter(NAME_WRITE_FILE, true))) {
             bufferedWriter.append(string);
-        } catch (IOException e) {
+        } catch (Exception e) {
             throw new RuntimeException(e);
         }
     }
     public void cleanFile() {
-        File file = new File(NAME_WRITE_FILE);
-        try (FileWriter fileWriter = new FileWriter(file)) {
+        try (FileWriter fileWriter = new FileWriter(NAME_WRITE_FILE)) {
             fileWriter.write("");
-        } catch (IOException e) {
+        } catch (Exception e) {
             throw new RuntimeException(e);
         }
     }
